[gd_scene load_steps=58 format=2]

[ext_resource path="res://prototypes/Void_Sphere.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/graphics/menus/dev_icons/thisisbennyk_icon.tres" type="Texture" id=2]
[ext_resource path="res://assets/graphics/menus/dev_icons/bobbie_icon.tres" type="Texture" id=3]
[ext_resource path="res://assets/graphics/menus/dev_icons/sayge_icon.tres" type="Texture" id=4]
[ext_resource path="res://assets/graphics/menus/dev_icons/toman_icon.tres" type="Texture" id=5]
[ext_resource path="res://assets/graphics/menus/dev_icons/slushy_icon.tres" type="Texture" id=6]
[ext_resource path="res://assets/graphics/menus/dev_icons/crit_icon.tres" type="Texture" id=7]
[ext_resource path="res://assets/graphics/menus/dev_icons/angel_icon.tres" type="Texture" id=8]
[ext_resource path="res://assets/graphics/menus/dev_icons/palladium_icon.tres" type="Texture" id=9]
[ext_resource path="res://assets/graphics/menus/dev_icons/cole_icon.tres" type="Texture" id=10]
[ext_resource path="res://assets/graphics/menus/dev_icons/jellyfish_icon.tres" type="Texture" id=11]
[ext_resource path="res://assets/graphics/menus/dev_icons/king_icon.tres" type="Texture" id=12]
[ext_resource path="res://assets/graphics/menus/dev_icons/jams_icon.tres" type="Texture" id=13]
[ext_resource path="res://default_env.tres" type="Environment" id=14]
[ext_resource path="res://assets/graphics/menus/logos/fnfvr_mini_logo.png" type="Texture" id=15]
[ext_resource path="res://assets/graphics/menus/dev_icons/finko_icon.tres" type="Texture" id=16]
[ext_resource path="res://assets/fonts/comic_helvetic/CH_Medium_48.tres" type="DynamicFont" id=17]
[ext_resource path="res://assets/graphics/menus/dev_icons/ninjamuffin_icon.tres" type="Texture" id=18]
[ext_resource path="res://assets/graphics/menus/dev_icons/phantomarcade_icon.tres" type="Texture" id=19]
[ext_resource path="res://assets/graphics/menus/dev_icons/kawaisprite_icon.tres" type="Texture" id=20]
[ext_resource path="res://assets/graphics/menus/logos/newgrounds_logo.png" type="Texture" id=21]
[ext_resource path="res://assets/graphics/menus/dev_icons/evilsk8r_icon.tres" type="Texture" id=22]
[ext_resource path="res://assets/fonts/comic_helvetic/ComicHelvetic_Heavy.otf" type="DynamicFontData" id=23]
[ext_resource path="res://assets/graphics/logo/fnfvr_logo_popup.png" type="Texture" id=24]
[ext_resource path="res://assets/graphics/logo/fnfvr_logo.png" type="Texture" id=25]
[ext_resource path="res://assets/fonts/vcr/vcr.ttf" type="DynamicFontData" id=26]
[ext_resource path="res://assets/sounds/confirmMenu.ogg" type="AudioStream" id=27]
[ext_resource path="res://assets/models/chars/gf/regular/Girlfriend.tscn" type="PackedScene" id=28]
[ext_resource path="res://scripts/menus/Intro.gd" type="Script" id=29]

[sub_resource type="World" id=1]
environment = ExtResource( 14 )
fallback_environment = ExtResource( 14 )

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("FNFVR_Dev_Icons/The_VP")

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("FNFVR_Dev_Icons/Team_VP")

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("FNFVR_Dev_Icons/Presents_VP")

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
albedo_color = Color( 0.976471, 0.811765, 0.317647, 1 )

[sub_resource type="SphereMesh" id=6]

[sub_resource type="World" id=7]
environment = ExtResource( 14 )
fallback_environment = ExtResource( 14 )

[sub_resource type="ViewportTexture" id=8]
viewport_path = NodePath("FNF_Dev_Msg/Based_VP")

[sub_resource type="ViewportTexture" id=9]
viewport_path = NodePath("FNF_Dev_Msg/Association_VP")

[sub_resource type="DynamicFont" id=10]
size = 256
font_data = ExtResource( 23 )

[sub_resource type="ViewportTexture" id=11]
viewport_path = NodePath("Funny_Quote/Quote_VP")

[sub_resource type="AtlasTexture" id=12]
flags = 21
atlas = ExtResource( 24 )
region = Rect2( 1, 1, 316, 192 )

[sub_resource type="AtlasTexture" id=13]
flags = 21
atlas = ExtResource( 24 )
region = Rect2( 319, 1, 304, 166 )

[sub_resource type="AtlasTexture" id=14]
flags = 21
atlas = ExtResource( 24 )
region = Rect2( 1, 195, 668, 289 )

[sub_resource type="AtlasTexture" id=15]
flags = 21
atlas = ExtResource( 24 )
region = Rect2( 625, 1, 177, 151 )

[sub_resource type="Animation" id=16]
resource_name = "Friday"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Friday:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.3 ),
"transitions": PoolRealArray( 1, 0.5, 1 ),
"update": 0,
"values": [ Vector3( -1.534, 1.16, 2 ), Vector3( -1.534, 1.16, 2.5 ), Vector3( -1.534, 1.16, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Friday:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=17]
resource_name = "Funkin"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Funkin:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.3 ),
"transitions": PoolRealArray( 1, 0.5, 1 ),
"update": 0,
"values": [ Vector3( 0.087, -0.426, 2 ), Vector3( 0.087, -0.426, 2.5 ), Vector3( 0.087, -0.426, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Funkin:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=18]
resource_name = "Night"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Night:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.3 ),
"transitions": PoolRealArray( 1, 0.5, 1 ),
"update": 0,
"values": [ Vector3( 1.26, 1.277, 2 ), Vector3( 1.26, 1.277, 2.5 ), Vector3( 1.26, 1.277, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Night:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=19]
resource_name = "VR"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("VR:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.3 ),
"transitions": PoolRealArray( 1, 0.5, 1 ),
"update": 0,
"values": [ Vector3( 2.381, -1.382, 2.1 ), Vector3( 2.381, -1.382, 2.6 ), Vector3( 2.381, -1.382, 0.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VR:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=20]
resource_name = "0"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector3( 1.1, 1.1, 1 ), Vector3( 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 10 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "1"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector3( 1.1, 1.1, 1 ), Vector3( 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -10 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="World" id=22]
environment = ExtResource( 14 )
fallback_environment = ExtResource( 14 )

[sub_resource type="DynamicFont" id=23]
size = 36
outline_size = 2
outline_color = Color( 0.2, 1, 1, 1 )
font_data = ExtResource( 26 )

[sub_resource type="ViewportTexture" id=24]
viewport_path = NodePath("Press_Start_VP")

[sub_resource type="Animation" id=25]
resource_name = "Confirm"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("../Press_Start_VP/Press_Start_Text:custom_fonts/normal_font:outline_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("../AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 27 )
} ],
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Press_Start_VP/Press_Start_Text:bbcode_text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "[center]LET'S GOOOO!!!" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Press_Start_VP/Press_Start_Text:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true ]
}

[sub_resource type="Animation" id=26]
resource_name = "Default"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Press_Start_VP/Press_Start_Text:bbcode_text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "[center][wave amp=50 freq=2]Press TRIGGER to start!" ]
}

[sub_resource type="Animation" id=27]
resource_name = "Fade"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../Logo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Logo:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=28]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Press_Start_VP/Press_Start_Text:custom_fonts/normal_font:outline_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.2, 1, 1, 1 ), Color( 0.2, 0.2, 0.8, 1 ) ]
}

[node name="Intro" type="Spatial"]
script = ExtResource( 29 )

[node name="FNFVR_Dev_Icons" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -10 )

[node name="Ben" type="Sprite3D" parent="FNFVR_Dev_Icons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.779, 1.719, 0 )
double_sided = false
texture = ExtResource( 2 )

[node name="Bobbie" type="Sprite3D" parent="FNFVR_Dev_Icons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.626, 2.028, 0 )
double_sided = false
texture = ExtResource( 3 )

[node name="Sayge" type="Sprite3D" parent="FNFVR_Dev_Icons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.507, 2.137, 0 )
double_sided = false
texture = ExtResource( 4 )

[node name="Toman" type="Sprite3D" parent="FNFVR_Dev_Icons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.595, 1.935, 0 )
double_sided = false
texture = ExtResource( 5 )

[node name="Slushy" type="Sprite3D" parent="FNFVR_Dev_Icons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.9, 0.868, 0 )
double_sided = false
texture = ExtResource( 6 )

[node name="Crit" type="Sprite3D" parent="FNFVR_Dev_Icons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.066, -2.141, 0 )
double_sided = false
texture = ExtResource( 7 )

[node name="Angel" type="Sprite3D" parent="FNFVR_Dev_Icons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.241, -1.881, 0 )
double_sided = false
texture = ExtResource( 8 )

[node name="Palladium" type="Sprite3D" parent="FNFVR_Dev_Icons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.273, -0.409, 0 )
double_sided = false
texture = ExtResource( 9 )

[node name="Cole" type="Sprite3D" parent="FNFVR_Dev_Icons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.32, -1.312, 0.001 )
double_sided = false
texture = ExtResource( 10 )

[node name="Jellyfish" type="Sprite3D" parent="FNFVR_Dev_Icons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.816, -1.487, 0 )
double_sided = false
texture = ExtResource( 11 )

[node name="King" type="Sprite3D" parent="FNFVR_Dev_Icons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.509, -1.939, 0 )
double_sided = false
texture = ExtResource( 12 )

[node name="Jams" type="Sprite3D" parent="FNFVR_Dev_Icons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.685, 1.19, 0 )
double_sided = false
texture = ExtResource( 13 )

[node name="Finko" type="Sprite3D" parent="FNFVR_Dev_Icons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.16, -0.151, 0 )
double_sided = false
texture = ExtResource( 16 )

[node name="The_VP" type="Viewport" parent="FNFVR_Dev_Icons"]
size = Vector2( 86, 45 )
own_world = true
world = SubResource( 1 )
transparent_bg = true
keep_3d_linear = true
render_target_v_flip = true

[node name="Label" type="Label" parent="FNFVR_Dev_Icons/The_VP"]
margin_right = 86.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0.94902, 0.360784, 0.0156863, 1 )
text = "The"
align = 1
valign = 1

[node name="Team_VP" type="Viewport" parent="FNFVR_Dev_Icons"]
size = Vector2( 126, 45 )
own_world = true
world = SubResource( 1 )
transparent_bg = true
keep_3d_linear = true
render_target_v_flip = true

[node name="Label" type="Label" parent="FNFVR_Dev_Icons/Team_VP"]
margin_right = 86.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0.94902, 0.360784, 0.0156863, 1 )
text = "Team"
align = 1
valign = 1

[node name="Presents_VP" type="Viewport" parent="FNFVR_Dev_Icons"]
size = Vector2( 202, 45 )
own_world = true
world = SubResource( 1 )
transparent_bg = true
keep_3d_linear = true
render_target_v_flip = true

[node name="Label" type="Label" parent="FNFVR_Dev_Icons/Presents_VP"]
margin_right = 202.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0.94902, 0.360784, 0.0156863, 1 )
text = "Presents"
align = 1
valign = 1

[node name="The" type="Sprite3D" parent="FNFVR_Dev_Icons"]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 1, 0, 0.918, 0 )
double_sided = false
texture = SubResource( 2 )

[node name="Mini_Logo" type="Sprite3D" parent="FNFVR_Dev_Icons"]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 1, 0, 0, 0 )
modulate = Color( 0.94902, 0.360784, 0.0156863, 1 )
double_sided = false
texture = ExtResource( 15 )

[node name="Team" type="Sprite3D" parent="FNFVR_Dev_Icons"]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 1, 0, -0.815, 0 )
double_sided = false
texture = SubResource( 3 )

[node name="Presents" type="Sprite3D" parent="FNFVR_Dev_Icons"]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 1, 0, -1.077, 0 )
visible = false
double_sided = false
texture = SubResource( 4 )

[node name="BG" type="MeshInstance" parent="FNFVR_Dev_Icons"]
transform = Transform( 3.47258, -0.243244, 0, 0.377121, 2.23983, 0, 0, 0, 0, 0, 0, -0.05 )
material_override = SubResource( 5 )
mesh = SubResource( 6 )
material/0 = null

[node name="FNF_Dev_Msg" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -10 )
visible = false

[node name="Ninjamuffin_Icon" type="Sprite3D" parent="FNF_Dev_Msg"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.765, 0 )
transparent = false
double_sided = false
texture = ExtResource( 18 )

[node name="PhantomArcade_icon" type="Sprite3D" parent="FNF_Dev_Msg"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.741, 0.765, 0 )
transparent = false
double_sided = false
texture = ExtResource( 19 )

[node name="KawaiSprite_Icon" type="Sprite3D" parent="FNF_Dev_Msg"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.597, 0.765, 0 )
transparent = false
double_sided = false
texture = ExtResource( 20 )

[node name="EvilSk8r_Icon" type="Sprite3D" parent="FNF_Dev_Msg"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.765, 0 )
transparent = false
double_sided = false
texture = ExtResource( 22 )

[node name="Based_VP" type="Viewport" parent="FNF_Dev_Msg"]
size = Vector2( 1001, 47 )
world = SubResource( 7 )
render_target_v_flip = true

[node name="ColorRect" type="ColorRect" parent="FNF_Dev_Msg/Based_VP"]
margin_right = 1001.0
margin_bottom = 47.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="FNF_Dev_Msg/Based_VP"]
margin_right = 1001.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 17 )
text = "Based on the hit indie open source game by"
align = 1
valign = 1

[node name="Association_VP" type="Viewport" parent="FNF_Dev_Msg"]
size = Vector2( 424, 45 )
world = SubResource( 7 )
render_target_v_flip = true

[node name="ColorRect" type="ColorRect" parent="FNF_Dev_Msg/Association_VP"]
margin_right = 1001.0
margin_bottom = 47.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="FNF_Dev_Msg/Association_VP"]
margin_right = 424.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 17 )
text = "in association with"
align = 1
valign = 1

[node name="Based" type="Sprite3D" parent="FNF_Dev_Msg"]
transform = Transform( 0.45, 0, 0, 0, 0.45, 0, 0, 0, 1, 0, 1.53, 0 )
transparent = false
double_sided = false
texture = SubResource( 8 )

[node name="Association" type="Sprite3D" parent="FNF_Dev_Msg"]
transform = Transform( 0.45, 0, 0, 0, 0.45, 0, 0, 0, 1, 0, 0, 0 )
visible = false
transparent = false
double_sided = false
texture = SubResource( 9 )

[node name="NG_Logo" type="Sprite3D" parent="FNF_Dev_Msg"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, -1.09439, 0 )
visible = false
transparent = false
double_sided = false
texture = ExtResource( 21 )

[node name="Funny_Quote" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -10 )
visible = false

[node name="Quote_VP" type="Viewport" parent="Funny_Quote"]
size = Vector2( 1280, 720 )
render_target_v_flip = true

[node name="ColorRect" type="ColorRect" parent="Funny_Quote/Quote_VP"]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quotes1" type="Label" parent="Funny_Quote/Quote_VP"]
margin_left = 350.0
margin_top = 270.0
margin_right = 476.0
margin_bottom = 506.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
text = "\""
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quotes2" type="Label" parent="Funny_Quote/Quote_VP"]
margin_left = 930.0
margin_top = 450.0
margin_right = 1056.0
margin_bottom = 686.0
rect_rotation = 180.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
text = "\""
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Funny_Quote/Quote_VP"]
margin_top = 270.0
margin_right = 1280.0
margin_bottom = 455.0
custom_fonts/font = ExtResource( 17 )
text = "you already know
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Funny_Quote/Quote_VP"]
visible = false
margin_top = 270.0
margin_right = 1280.0
margin_bottom = 455.0
custom_fonts/font = ExtResource( 17 )
text = "
we really out here"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Funny_Quote/Quote_VP"]
visible = false
margin_top = 455.0
margin_right = 1280.0
margin_bottom = 500.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0.72549, 0.72549, 0.72549, 1 )
text = "- ninjamuffin99"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quote" type="Sprite3D" parent="Funny_Quote"]
transparent = false
double_sided = false
texture = SubResource( 11 )

[node name="FNFVR_Logo_Popup" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -10 )
visible = false

[node name="Friday" type="Sprite3D" parent="FNFVR_Logo_Popup"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.534, 1.16, 0 )
visible = false
texture = SubResource( 12 )

[node name="Night" type="Sprite3D" parent="FNFVR_Logo_Popup"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.26, 1.277, 0 )
visible = false
texture = SubResource( 13 )

[node name="Funkin" type="Sprite3D" parent="FNFVR_Logo_Popup"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.087, -0.426, 0 )
visible = false
texture = SubResource( 14 )

[node name="VR" type="Sprite3D" parent="FNFVR_Logo_Popup"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.381, -1.382, 0.1 )
visible = false
texture = SubResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="FNFVR_Logo_Popup"]
anims/Friday = SubResource( 16 )
anims/Funkin = SubResource( 17 )
anims/Night = SubResource( 18 )
anims/VR = SubResource( 19 )

[node name="Logo" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -10 )
visible = false
double_sided = false
texture = ExtResource( 25 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Logo"]
anims/0 = SubResource( 20 )
anims/1 = SubResource( 21 )

[node name="Press_Start_VP" type="Viewport" parent="."]
size = Vector2( 750, 50 )
own_world = true
world = SubResource( 22 )
transparent_bg = true
render_target_v_flip = true

[node name="ColorRect" type="ColorRect" parent="Press_Start_VP"]
margin_right = 750.0
margin_bottom = 50.0
color = Color( 0, 0, 0, 1 )

[node name="Press_Start_Text" type="RichTextLabel" parent="Press_Start_VP"]
margin_top = 2.0
margin_right = 750.0
margin_bottom = 52.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 23 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center][wave amp=50 freq=2]Press TRIGGER to start!"
text = "Press TRIGGER to start!"

[node name="Press_Start" type="Sprite3D" parent="."]
transform = Transform( 1.25, 0, 0, 0, 1.25, 0, 0, 0, 1, 0, -0.755, -10.1 )
visible = false
transparent = false
double_sided = false
texture = SubResource( 24 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Press_Start"]
anims/Confirm = SubResource( 25 )
anims/Default = SubResource( 26 )
anims/Fade = SubResource( 27 )
anims/Loop = SubResource( 28 )

[node name="Girlfriend" parent="." instance=ExtResource( 28 )]
transform = Transform( 0.00707066, 0, -0.00842649, 0, 0.011, 0, 0.00842649, 0, 0.00707066, 4, -0.466, -5.85 )
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )

[node name="Void_Sphere" parent="." instance=ExtResource( 1 )]

[node name="GF_Tween" type="Tween" parent="."]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
visible = false
current = true
